# hvg-converter

./: CMakeLists.txt  README.txt
include/: mainDlg.h
src/: main.cpp  mainDlg.cpp
ui/: converter_main.ui
